--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,14 +14,21 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.CineSwift"
         tools:targetApi="31">
+
+        <activity
+            android:name=".CardViewMovieAdapter"
+            android:exported="false" />
         <activity
             android:name=".DetailMovie_Activity"
             android:exported="false" />
         <activity
-            android:name=".Activity_Bioskop1"
+            android:name=".MainActivity"
             android:exported="false" />
         <activity
-            android:name=".MainActivity"
+            android:name=".Login_Page"
+            android:exported="false" /> 
+        <activity
+            android:name=".ImageSlide"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
